Direct stellarium renderer (#4)
Rewriting SPC to export a .ssc file, that can be read by stellarium directly, greatly simplifying the process